# minifluxsearch

./: .editorconfig  .gitignore  LICENSE  PKGBUILD  README.md  minifluxsearch-gui.spec  minifluxsearch.spec  pyproject.toml
.github/workflows/: release.yml  test.yml
minifluxsearch/: __init__.py  __main_cli__.py  __main_gui__.py  api.py  cli.py  config.py  gui.py  models.py  search.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_models.py  test_search.py
