[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minifluxsearch"
version = "0.1.0"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "tkcalendar>=1.6",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
minifluxsearch = "minifluxsearch.cli:main"

[project.gui-scripts]
minifluxsearch-gui = "minifluxsearch.gui:main"

[tool.hatch.build.targets.wheel]
include = ["minifluxsearch/**"]
