[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minifluxsearch"
version = "0.3.0"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "tkcalendar>=1.6",
]

[project.optional-dependencies]
test  = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
minifluxsearch = "minifluxsearch.cli:main"

[project.gui-scripts]
minifluxsearch-gui = "minifluxsearch.gui:main"

[tool.hatch.build.targets.wheel]
include = ["minifluxsearch/**"]
